[package]
name = "kos-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
kos-sys = { package = "kos-sys", git = "https://github.com/dreamcast-rs/kos-sys" }

[patch.crates-io]
libc = { path = "/opt/toolchains/dc/rust/libc" }

# Uncomment to use local version of kos-sys crate
#[patch.'https://github.com/dreamcast-rs/kos-sys']
#kos-sys = { package = "kos-sys", path = "/opt/toolchains/dc/rust/kos-sys" }
